fixed pricing on mobile

--- a/resources/assets/stylesheets/sass/blocks/price-block/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/price-block/index.sass
@@ -1,4 +1,14 @@
 .price-block
+  flex: 0 0 (100%/3)
+  padding: 0 15px
+  +media-768
+    flex: 0 0 70%
+  +media-480
+    flex: 0 0 80%
+  +media-375
+    flex: 0 0 90%
+  +media-320
+    flex: 0 0 100%
 
   &__image
     width: 100%
