--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -43,6 +43,9 @@
 =media-480
   @media only screen and (max-width: 480px)
     @content
+=media-375
+  @media only screen and (max-width: 375px)
+    @content
 =media-320
   @media only screen and (max-width: 320px)
     @content
